--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        name="viewport"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta content="#000000" name="theme-color" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -24,7 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Frases Breaking Bad</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Handlee|Staatliches" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
